--- a/exe/install
+++ b/exe/install
@@ -69,6 +69,10 @@ setup_zpresto() {
 
 setup_minpac_plugins() {
   say "Installing Vim plugins"
+
+  rm -f $HOME/.config/nvim/init.vim
+  ln -s $HOME/.vimrc $HOME/.config/nvim/init.vim
+
   nvim +PackUpdate +q && echo
   say_done
 }
