--- a/exe/install
+++ b/exe/install
@@ -3,6 +3,12 @@
 
 set -e
 
+# Ask for the administrator password upfront
+sudo -v
+
+# Keep-alive: update existing `sudo` time stamp until `install` has finished
+while true; do sudo -n true; sleep 30; kill -0 "$$" || exit; done 2>/dev/null &
+
 # Don't need these right now, but maybe later on
 # readonly PROGNAME=`basename $0`
 # readonly PROGDIR=`/usr/bin/readlink -n $(dirname $0)`
@@ -30,11 +36,78 @@ say_done() {
   echo -e "${BCYAN}==>${NC}${BGREEN} Done!${NC}"
 }
 
+install_homebrew() {
+  if [ ! -x "$(command -v brew)" ]; then
+    say "Installing Homebrew"
+    ruby <(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)
+    say_done
+  else
+    announce "Homebrew already installed"
+  fi
+}
+
+clone_repo_to_dotfiles() {
+  local dir="$HOME/.dotfiles"
+
+  if [ ! -d $dir ]; then
+    say "Cloning dotfiles repository"
+    git clone https://github.com/mdespuits/dotfiles.git $HOME/.dotfiles
+    say_done
+  else
+    announce "Dotfiles repo already cloned."
+  fi
+}
+
+install_vim_minpac() {
+  say "Preparing minpac for Vim"
+  if [ ! -d "$HOME/.config/nvim/pack/minpac/opt/minpac" ]; then
+    say "Cloning minpac for neovim"
+
+    mkdir -p ~/.config/nvim/pack/minpac/opt/
+    git clone https://github.com/k-takata/minpac.git "$HOME/.config/nvim/pack/minpac/opt/minpac"
+
+    popd &> /dev/null
+    say_done
+  else
+    announce "Updating minpac"
+
+    pushd "$HOME/.config/nvim/pack/minpac/opt/minpac" &> /dev/null
+    git pull
+
+    popd &> /dev/null
+  fi
+
+  popd &> /dev/null
+  say_done
+}
+
+install_brews() {
+  say "Homebrew Bundling..."
+  pushd $HOME/.dotfiles &> /dev/null
+  brew bundle --no-upgrade
+  popd &> /dev/null
+  say_done
+}
+
+setup_zsh_as_default() {
+  if [ -f /usr/local/bin/zsh ]; then
+    say "Setting zsh as default shell"
+    sudo chsh -s $(which zsh) $(whoami)
+  else
+    announce "Homebrew zsh already set as default shell"
+    say_done
+  fi
+}
+
 setup_dotfiles() {
   say "Setting up dotfiles"
   rm -rf $HOME/.rcrc
   ln -s $HOME/.dotfiles/rcrc ~/.rcrc
-  rcup -v
+  rcup
+
+  rm -f $HOME/.config/nvim/init.vim
+  ln -s $HOME/.vimrc $HOME/.config/nvim/init.vim
+
   say_done
 }
 
@@ -65,8 +138,15 @@ setup_minpac_plugins() {
   say_done
 }
 
-
 main() {
+  install_homebrew && echo
+
+  clone_repo_to_dotfiles && echo
+
+  install_brews && echo
+  install_vim_minpac && echo
+
+  setup_zsh_as_default && echo
   setup_dotfiles && echo
   setup_zpresto && echo
   setup_minpac_plugins && echo
