setup: don't use white. just reset color

--- a/exe/install
+++ b/exe/install
@@ -18,13 +18,12 @@ readonly GREEN='\033[0;32m'
 readonly BLUE='\033[0;34m'
 readonly BGREEN='\033[1;32m'
 readonly BCYAN='\033[1;36m'
-readonly BWHITE='\033[1;37m'
 readonly NC='\033[0m'
 
 say() {
   local statement=$@
 
-  echo -e "${BCYAN}==> ${BWHITE}$statement${NC}"
+  echo -e "${BCYAN}==> ${NC}$statement${NC}"
 }
 
 announce() {
