--- a/exe/install
+++ b/exe/install
@@ -46,17 +46,35 @@ install_setup_homebrew() {
   fi
 }
 
+install_tpm() {
+	local dir=$HOME/.tmux/plugins/tpm
+
+  mkdir -p $HOME/.tmux/plugins
+	if [ ! -d $dir ]; then
+    say "Install TPM for tmux"
+		git clone https://github.com/tmux-plugins/tpm $dir &> /dev/null
+		say_done
+	else
+    pushd $dir &> /dev/null
+		say "Updating TPM"
+		git pull --rebase --autostash
+
+		popd &> /dev/null
+	fi
+
+  say_done
+}
+
 clone_repo_to_dotfiles() {
   local dir="$HOME/.dotfiles"
 
   if [ ! -d $dir ]; then
     say "Cloning dotfiles repository"
-    git clone https://github.com/mdespuits/dotfiles.git $HOME/.dotfiles
-    say_done
+    git clone https://github.com/mdespuits/dotfiles.git $dir
   else
     say "Updating dotfiles"
 
-    pushd "$HOME/.dotfiles" &> /dev/null
+    pushd $dir &> /dev/null
     git pull --rebase --autostash
 
     popd &> /dev/null
@@ -66,11 +84,12 @@ clone_repo_to_dotfiles() {
 
 main() {
   install_setup_homebrew && echo
+  install_tpm && echo
   clone_repo_to_dotfiles && echo
 
-  . $HOME/.dotfiles/exe/deps
-  . $HOME/.dotfiles/exe/setup
-  . $HOME/.dotfiles/exe/macos
+  # . $HOME/.dotfiles/exe/deps
+  # . $HOME/.dotfiles/exe/setup
+  # . $HOME/.dotfiles/exe/macos
 
   announce "Dotfiles setup!"
 }
