setup: Install working version of yarn

--- a/exe/install
+++ b/exe/install
@@ -71,6 +71,13 @@ install_git() {
   say_done
 }
 
+install_correct_yarn_version() {
+  say "Install yarn 1.9.4"
+  brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/c1e2120401b511a5f393ee9148f10b22d24d936e/Formula/yarn.rb
+  brew pin yarn
+  say_done
+}
+
 clone_repo_to_dotfiles() {
   local dir="$HOME/.dotfiles"
 
@@ -92,6 +99,7 @@ main() {
   install_setup_homebrew && echo
   install_tpm && echo
   install_git && echo
+  install_correct_yarn_version && echo
   clone_repo_to_dotfiles && echo
 
   . $HOME/.dotfiles/exe/deps
